ajax+spring boot

--- a/taco-cloud/src/main/resources/templates/home.html
+++ b/taco-cloud/src/main/resources/templates/home.html
@@ -6,8 +6,8 @@
 </head>
 
 <body>
-<h1>Welcome to...hh</h1>
+<h1>Welcome to...</h1>
 <img th:src="@{/images/TacoCloud.png}"/>
-<!--<img src="../static/images/TacoCloud.png}"/>-->
+<a th:href="@{/design}" id="design">Design a taco</a>
 </body>
 </html>
