--- a/demo0318/src/main/resources/templates/home.html
+++ b/demo0318/src/main/resources/templates/home.html
@@ -12,6 +12,6 @@
 <a href="/person/update">update</a>
 <a href="/person/find">find</a>
 <hr />
-<a href="/peradmin">人员管理</a>
+<a href=""
 </body>
 </html>
