--- a/demo0318/src/main/resources/templates/person/update.html
+++ b/demo0318/src/main/resources/templates/person/update.html
@@ -16,6 +16,6 @@ update
     性别<input type="text" name="sex" th:value="${p.getSex()}"><br />
     <input type="submit">
 </form>
-<a href="/peradmin"> 返回首页</a>
+<a href="/person"> 返回首页</a>
 </body>
 </html>
