--- a/demo0318/src/main/resources/templates/person/delete.html
+++ b/demo0318/src/main/resources/templates/person/delete.html
@@ -5,12 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-find
+delete
 <hr />
-<form method="post" action="/person/find">
-    输入要查找的名字<input type="text" name="name"><br />
+<form method="post" action="/person/delete">
+    输入要删除的id<input type="number" name="id"><br />
     <input type="submit">
 </form>
-<a href="/peradmin"> 返回首页</a>
 </body>
 </html>
