--- a/demo0318/src/main/resources/templates/person/find.html
+++ b/demo0318/src/main/resources/templates/person/find.html
@@ -11,6 +11,6 @@ find
     输入要查找的名字<input type="text" name="name"><br />
     <input type="submit">
 </form>
-<a href="/peradmin"> 返回首页</a>
+<a href="/"> 返回首页</a>
 </body>
 </html>
