bootstrap 练习第一天

--- a/InnotekDemo02/src/main/resources/templates/mytest/test11.html
+++ b/InnotekDemo02/src/main/resources/templates/mytest/test11.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang=zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-
+    <title>折叠和手风琴</title>
 </head>
 <body>
 
