--- a/InnotekDemo02/src/main/resources/templates/mytest/test12.html
+++ b/InnotekDemo02/src/main/resources/templates/mytest/test12.html
@@ -2,6 +2,20 @@
 <html lang=zh-CN">
 <head>
     <meta charset="UTF-8">
+    
+    <!--添加让 viewport（视口）支持响应式布局的 标签-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!--    本地引入依赖文件-->
+    <link rel="stylesheet" href="../../static/css/bootstrap.css">
+    <script src="../../static/js/jquery-3.6.0.js"></script>
+    <script src="../../static/js/bootstrap.bundle.js"></script>
+    <!--    测试jquery-->
+    <script>
+        $(document).ready(function () {
+            // alert("jquery 已启用");
+        })
+    </script>
+
     <title>导航</title>
 </head>
 <body>
